--- a/Monaco_GP_Sim.ipynb
+++ b/Monaco_GP_Sim.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 2025 Monaco GP Strategy - Monte Carlo Simulation\n",
     "\n",
-    "This simulates race strategies for a backmarker starting near the back of the field for the 2025 Monaco Grand Prix. It compares actual strategy from the race to a early 2-stop strategy suggested on Sky Sports by Bernie Collins. Because Monaco is famously difficult to overtake, the model prioritizes track position an pit windows\n",
+    "This simulates race strategies for a backmarker starting near the back of the field for the 2025 Monaco Grand Prix. It compares actual strategy from the race to a early 2-stop strategy suggested on Sky Sports by Bernie Collins. Because Monaco is famously difficult to overtake, the model prioritizes track position an pit windows. The link to the article is here: https://www.skysports.com/f1/news/37628/13371567/monaco-gp-sky-sports-f1s-bernie-collins-analyses-impact-new-extra-pit-stop-rule-will-have-on-2025-event\n",
     "\n",
     "\n",
     "### Tuning the Model\n",
